Ajuste do texto h1

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="./src/imagens/logo-gta-v.svg" alt="Logo GTA V">
                 <img src="./src/imagens/logo-gta-online.svg" alt="Logo GTA Online">
             </div>
-            <h1 class="titulo">Já disponível para Playstation 5 e Xbox Series XS</h1>
+            <h1 class="titulo">Já disponíveis para Playstation 5 e Xbox Series XS</h1>
             <p class="texto">Experimente os fenomenos do entretenimento Grand Theft Auto V e GTA Online</p>
             <a class="btn-comprar" href="#compre-ja">Compre Já</a>
         </div>
